# various-recommendation-methods

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint.yaml  test.yaml
src/: base_recommend.py  dataset.py  evaluation.py
src/models/association_rules/: main.py  model.py
src/models/random/: main.py  model.py
src/recommend/: base_recommend.py  dataset.py  evaluation.py
src/recommend/model/association_rules/: model.py
src/recommend/model/random/: main.py  model.py  params.py
src/recommend/random/: main.py  model.py
src/recommend/util/: dataset.py  dataset_loader.py  evaluation.py  path.py
src/test/: test_evaluation.py
src/test/util/: test_path.py
src/util/: dataset_loader.py  path.py
src/utils/: path.py
tests/: test_evaluation.py
tests/util/: test_path.py
